--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="videos">
           <div class="video">
             <a
-              href="https://animepahe.ru/play/01446415-618b-e2a4-b2f3-9a3414fbe770/ec2048b6a005c8f82b5366a08e8b83baefcc000f5ae18166bd32c90cff98c23b"
+              href="videoplayer.html"
               target="__self"
             >
               <img
