--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+
     <script src="index.js"></script>
     <title>animepahe ::okay-ish anime website</title>
   </head>
@@ -52,10 +53,7 @@
         <p>Latest Episodes</p>
         <div class="videos">
           <div class="video">
-            <a
-              href="videoplayer.html"
-              target="__self"
-            >
+            <a href="videoplayer.html" target="__self">
               <img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFsXYaypzJQwP8O_qOuF7k2_Taz31jMSfy2w&usqp=CAU"
                 alt="demon-layer"
